--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
-        "vue": "^3.2.36"
+        "chart.js": "^4.2.1",
+        "vue": "^3.2.36",
+        "vue-chartjs": "^5.2.0"
     }
 }
