--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
     "private": true,
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "dev": "vite --port 5173",
+        "build": "vite build",
+        "preview": "vite preview --port 5173"
     },
     "devDependencies": {
         "axios": "^1.1.2",
@@ -14,6 +15,8 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
         "chart.js": "^4.2.1",
+        "g": "^2.0.1",
+        "npm": "^9.6.1",
         "vue": "^3.2.36",
         "vue-chartjs": "^5.2.0"
     }
